--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,9 @@
             <label>
                 <input type="radio" name="model" value="gpt-4.1" checked> GPT-4.1
             </label>
+            <!--label>
+                <input type="radio" name="model" value="gpt-5" checked> GPT-5
+            </label-->
             <label>
                 <input type="radio" name="model" value="o4-mini"> o4-mini
             </label>
